--- a/index.html
+++ b/index.html
@@ -19,9 +19,97 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo do Coffeeshop Triple Peaks"
+            class="nav__logo"
+          />
+          <!-- Colocar links de navegação em uma lista é supostamente a melhor prática para escrever o código semântico, pois permite que os leitores de tela façam uma pausa entre cada link em vez de ler todos os links como uma frase. -->
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#staff">Escolhas da Equipe</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#recipes">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__content">
+          <div>
+            <h1 class="header__title">
+              <span class="header__span-accent">Café especial</span>
+              na biblioteca Triple Peaks
+            </h1>
+            <p class="header__description">
+              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+              você e vibrações aconchegantes para soltar a criatividade.
+            </p>
+          </div>
+          <!-- -------------------------------------------------------------------- -->
+          <!--       Não remova o comentário até a seção 2.3 do roteiro da etapa 1         -->
+          <!-- -------------------------------------------------------------------- -->
+          <img
+            src="./images/inside_coffee_shop.png"
+            alt="Ilustração Dentro da Cafeteria"
+            class="header__image"
+          />
+        </div>
+        <div class="header__footer">
+          <div class="header__container-paragraphs">
+            <p class="header__paragraph">Horários:</p>
+            <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
+            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+          </div>
+          <p class="header__address">
+            200 Success Avenue, a cidade de Triple Peaks
+          </p>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+          <ul class="recipes__videos">
+            <li class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=LzAfnsrrZ4GMED87"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-captions">
+                <p class="recipes__video-caption">Receita Aeropress</p>
+                <p class="recipes__video-caption">~5 min</p>
+              </div>
+            </li>
+            <li class="recipes__video-item">
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=ojfOs0ZjH-CaWFpg"
+                title="YouTube video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="recipes__video-captions">
+                <p class="recipes__video-caption">Receita de Prensa Francesa</p>
+                <p class="recipes__video-caption">~15 min</p>
+              </div>
+            </li>
+          </ul>
+        </section>
         <section class="reservetion"></section>
       </main>
       <footer class="footer"></footer>
