--- a/index.html
+++ b/index.html
@@ -35,40 +35,36 @@
               <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a class="nav__link">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
               <a class="nav__link">Contatos</a>
             </li>
           </ul>
         </nav>
-        <div class="header__content">
-          <div>
-            <h1 class="header__title">
-              <span class="header__span-accent">Café especial</span>
-              na biblioteca Triple Peaks
-            </h1>
-            <p class="header__description">
-              Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
-              você e vibrações aconchegantes para soltar a criatividade.
-            </p>
-          </div>
-          <!-- -------------------------------------------------------------------- -->
-          <!--       Não remova o comentário até a seção 2.3 do roteiro da etapa 1         -->
-          <!-- -------------------------------------------------------------------- -->
-          <img
-            src="./images/inside_coffee_shop.png"
-            alt="Ilustração Dentro da Cafeteria"
-            class="header__image"
-          />
-        </div>
+        <h1 class="header__title">
+          <span class="header__span-accent">Café especial</span>
+          na biblioteca Triple Peaks
+        </h1>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
+        <!-- -------------------------------------------------------------------- -->
+        <!--       Não remova o comentário até a seção 2.3 do roteiro da etapa 1         -->
+        <!-- -------------------------------------------------------------------- -->
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustração Dentro da Cafeteria"
+          class="header__image"
+        />
         <div class="header__footer">
           <div class="header__container-paragraphs">
             <p class="header__paragraph">Horários:</p>
             <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
             <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
           </div>
-          <p class="header__address">
+          <p class="header__paragraph">
             200 Success Avenue, a cidade de Triple Peaks
           </p>
         </div>
@@ -110,7 +106,7 @@
             </li>
           </ul>
         </section>
-        <section class="reservetion"></section>
+        <section class="reservation" id="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
