--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <label class="form__label">
                 Seu e-mail*
                 <input
-                  type="datetime-local"
+                  type="email"
                   class="form__input"
                   required
                   name="email"
