--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="author" content="Sivaldo Miranda" />
     <meta name="keywords" content="html e css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
@@ -198,7 +197,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyright">&copy 2024 Sivaldo Miranda</p>
+        <p class="footer__copyright">&copy; 2024 Sivaldo Miranda</p>
       </footer>
     </div>
   </body>
